<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SmartShop</string>
    <string name="warehouse">Omborxona</string>
    <string name="clients">Mijozlar</string>
    <string name="new_client">Yangi mijoz</string>
    <string name="sales">Sotuvlar</string>
    <string name="new_sale">Yangi sotuv</string>
    <string name="new_payment">Yangi to\'lov</string>
    <string name="home_button" translatable="false">Home Button</string>
    <string name="full_name">F. I. Sh.</string>
    <string name="phone_number">Telefon raqam</string>
    <string name="legal_person">Yuridik shaxs</string>
    <string name="natural_person">Jismoniy shaxs</string>
    <string name="tax_identification_number">STIR (ИНН)</string>
    <string name="address">Manzil</string>
    <string name="comment">Izoh</string>
    <string name="add">Qo\'shish</string>
    <string name="enter_special_code">Maxsus kodingizni kiriting</string>
    <string name="required_field">To\'ldirilishi shart</string>
    <string name="new_product">Yangi mahsulot</string>
    <string name="choose_client">Mijozni tanlang</string>
    <string name="sum_uzb">Summa</string>
    <string name="date_uzb">Sana</string>
    <string name="selected_sum">Kiritish</string>
    <string name="cash_cost">Naqd</string>
    <string name="card_cost">Plastik</string>
    <string name="method_uzb">To\'lov turi</string>
    <string name="cash_uzb">Naqd pul</string>
    <string name="uzcard">Plastik karta</string>
    <string name="mix">Aralash</string>
    <string name="cancel_uzb">Bekorlash</string>
    <string name="done_uzb">Saylash</string>
    <string name="call" translatable="false">Call</string>
    <string name="uzs" translatable="false">UZS</string>
    <string name="close">Yopish</string>
    <string name="search">Izlash</string>
    <string name="count_text">%s dona</string>
    <string name="sum_text" translatable="false">%s UZS</string>
    <string name="price_text" translatable="false">%s %s</string>
    <string name="sort_button" translatable="false">Sort Button</string>
    <string name="by_product_name">Mahsulot nomi bo\'yicha</string>
    <string name="by_category">Kategoriya bo\'yicha</string>
    <string name="by_remain">Qoldiq bo\'yicha</string>
    <string name="by_ascend">O\'sish tartibida</string>
    <string name="by_descend">Kamayish tartibida</string>
    <string name="by_few_remain">Kam qolganlar bo\'yicha</string>
    <string name="status_indicator" translatable="false">Status Indicator</string>
    <string name="payment_cash">Naqd</string>
    <string name="payment_card">Bank kartasi</string>
    <string name="choose_category">Kategoriyani tanlang</string>
    <string name="product_name">Mahsulot nomi</string>
    <string name="brand_name">Ishlab chiqaruvchi</string>
    <string name="cost_price">Tan narxi</string>
    <string name="wholesale_price">Ulgurji narxi</string>
    <string name="min_price">Minimum narxi</string>
    <string name="max_price">Maximum narxi</string>
    <string name="add_new_product">Mahsulot qo\'shish</string>
    <string name="new_category">Yangi kategoriya</string>
    <string name="add_new_category">Kategoriya qo\'shish</string>
    <string name="wholesale_percent">Ulgurji foizi</string>
    <string name="max_percent">Maximum foizi</string>
    <string name="min_percent">Minimum foizi</string>
    <string name="category_name">Kategoriya nomi</string>
    <string name="min_quantity">Minimum miqdori</string>
    <string name="min_quantity_hint">Omborxonadagi ushbu kategoriyaga tegishli mahsulotlar shu miqdordan oz bo\'lsa kam qolgan hisoblanadi</string>
    <string name="add_new_category_desc" translatable="false">Add New Category</string>
    <string name="search_client_hint">Mijozni ism sharifi bo\'yicha izlashingiz mumkin</string>
    <string name="add_payment">To\'lovni qo\'shish</string>
    <string name="choose_payment_method">To\'lov turini tanlang</string>
    <string name="new_pin_code">Yangi kod olish</string>
    <string name="basket">Savat</string>
    <string name="fill_the_fields">Qatorlarni to\'ldiring!</string>
    <string name="wrong_pincode">Mavjud bo\'lmagan maxfiy kod!</string>
    <string name="input_sum">Summani kiriting!</string>
    <string name="input_sum_and_date">Summa va sanani kiriting</string>
    <string name="success">Muvaffaqiyatli!</string>
    <string name="order_successfully_done">Buyurtma muvvaffaqiyatli amalga oshirildi!</string>
    <string name="client_successfully_added">Mijoz muvaffaqiyatli qo\'shildi!</string>
    <string name="product_quantity">Mahsulot soni</string>
    <string name="type_of_client">Shaxs turi</string>
    <string name="payment">To\'lov</string>
    <string name="cash_pay_helper">Naqd pul orqali to\'langan qiymatni kiriting</string>
    <string name="card_pay_helper">Plastik karta orqali to\'langan qiymatni kiriting</string>
    <string name="payment_debt">Qarz</string>
    <string name="debt_pay_helper">Qarz bo\'lgan pul qiymatni kiriting</string>
    <string name="debt_pay_date_helper">Qarz to\'lanadigan oxirgi muddat (agar qarz qolgan bo\'lsa)</string>
    <string name="payment_mix">Aralash</string>
    <string name="add_to_basket">Savatga qo\'shish</string>
    <string name="wholesale_price_text">Ulgurji: %s %s</string>
    <string name="min_price_text">Minimum: %s %s</string>
    <string name="max_price_text">Narxi: %s %s</string>
    <string name="quantity">Soni</string>
    <string name="pay">To\'lash</string>
    <string name="counter_text" translatable="false">%s/%s</string>
    <string name="not_enough_error">Mahsulot yetarli emas!</string>
    <string name="basket_en" translatable="false">Basket</string>
    <string name="confirm_order">Buyurtmani amalga oshirish</string>
    <string name="delete_product" translatable="false">Delete product</string>
    <string name="total_sum_text">Summa: %s %s</string>
    <string name="total_debt_text">Qarz: %s %s</string>
    <string name="input_correct_info">Aniq ma\'lumot kiriting</string>
    <string name="basket_empty_warning">Avval savatga mahsulot qo\'shing!</string>
    <string name="add_to_basket_en" translatable="false">Add to basket</string>
    <string name="choose_date_uz">Sanani tanlang</string>
    <string name="add_client_en" translatable="false">Add Client</string>
    <string name="add_category_en" translatable="false">Add Category</string>
    <string name="product_added_successfully">Mahsulot muvaffaqiyatli qo\'shildi!</string>
    <string name="product_quantity_helper">Omborxonaga shu mahsulotdan qancha miqdorda qo\'shilishi</string>
    <string name="set_duration">Muddatni ko\'rsating</string>
    <string name="today">Bugun</string>
    <string name="type_of_payment_three" translatable="false">%s/%s/%s</string>
    <string name="type_of_payment_two" translatable="false">%s/%s</string>
    <string name="start_date" tools:ignore="TypographyEllipsis">...dan</string>
    <string name="end_date" tools:ignore="TypographyEllipsis">...gacha</string>
    <string name="calculate">Hisoblash</string>
    <string name="remove_uz">O\'chirish</string>
    <string name="confirm_remove_uz">Siz rostdan ham ushbu mahsulotni savatdan o\'chirmoqchimisiz?</string>
    <string name="price_visibility_en" translatable="false">Price visibility</string>
    <string name="dollar_rate_text" translatable="false">1$ = %s UZS</string>
    <string name="finance">Moliya</string>
    <string name="cashbox_icon" translatable="false">Cashbox Icon</string>
    <string name="expenses">Xarajatlar</string>
    <string name="expense_any">Boshqalar</string>
    <string name="expense_administrative">Ma\'muriy xarajatlar</string>
    <string name="expense_rent">Ijara to\'lovlari</string>
    <string name="expense_salary">Oylik</string>
    <string name="expense_investments">Investitsiyalar</string>
    <string name="expense_office">Idora</string>
    <string name="expense_taxes">Soliqlar</string>
    <string name="expense_household">Uy xarajatlari</string>
    <string name="expense_any_short">Bosh\nqa</string>
    <string name="expense_administrative_short">Ma\'m\nxar</string>
    <string name="expense_rent_short">Ija\nra</string>
    <string name="expense_salary_short">Oy\nlik</string>
    <string name="expense_investments_short">Inv\nest</string>
    <string name="expense_office_short">Ido\nra</string>
    <string name="expense_taxes_short">So\nliq</string>
    <string name="expense_household_short">Xo\'j\nxar</string>
    <string name="new_expense">Yangi xarajat</string>
    <string name="expense_en" translatable="false">Expense</string>
    <string name="description">Nomi</string>
    <string name="category">Kategoriya</string>
    <string name="payee">Oluvchi</string>
    <string name="add_expense">Xarajat qo\'shish</string>
    <string name="not_selected">Tanlanmagan</string>
    <string name="payer">Beruvchi</string>
    <string name="add_income">Kirim qo\'shish</string>
    <string name="incomes">Kirimlar</string>
    <string name="cashbox_title">Kassa</string>
    <string name="natural_person_short">J</string>
    <string name="legal_person_short">Yu</string>
    <string name="expense_any_back" translatable="false">Boshqa</string>
    <string name="expense_administrative_back" translatable="false">Ma\'muriy</string>
    <string name="expense_rent_back" translatable="false">Ijara</string>
    <string name="expense_salary_back" translatable="false">Ish haqi</string>
    <string name="expense_investments_back" translatable="false">Investitsiyalar</string>
    <string name="expense_office_back" translatable="false">Ofis   </string>
    <string name="expense_taxes_back" translatable="false">Soliqlar</string>
    <string name="expense_household_back" translatable="false">Maishiy</string>
    <string name="category_added_successfully">Kategoriya muvaffaqiyatli qo\'shildi!</string>
    <string name="choose_payment_type">To\'lov turini tanlang</string>
    <string name="choose_client_and_fill_payment">Iltimos mijozni tanlang va to\'lovni to\'liq kiriting</string>
    <string name="payment_successfully">To\'lov muvaffaqiyatli amalga oshirildi!</string>
    <string name="count">dona</string>
    <string name="lang_name">O\'zbek</string>
    <string name="lang_title" translatable="false">Lang/Язык/Til</string>
    <string name="debt_icon" translatable="false">Debt Icon</string>
    <string name="cash_icon" translatable="false">Cash Icon</string>
    <string name="card_icon" translatable="false">Card Icon</string>
    <string name="sum_of_sale">Sotuv summasi:</string>
    <string name="yes">Ha</string>
    <string name="error">Xatolik!</string>
    <string name="purchases">Xaridlar</string>
    <string name="payments">To\'lovlar</string>
    <string name="transaction">Tranzaksiya</string>
    <string name="transaction_successful">Tranzaksiya muvaffaqiyatli amalga oshirildi!</string>
    <string name="choose_range">Oraliqni tanlang</string>
    <string name="date_range_text" translatable="false">%s - %s</string>
    <string name="profit_title">Sof foyda</string>
    <string name="err_valid_sum">Haqiqiy summa kiriting</string>
    <string name="warning">Ishonchingiz komilmi?</string>
    <string name="reports">Hisobotlar</string>
    <string name="price_icon" translatable="false">Price icon</string>
    <string name="payment_type">To\'lov turi</string>
    <string name="return_order">Mahsulotni qaytarish</string>
    <string name="payment_debt_paid">To\'langan qarz</string>
    <string name="text_continue">Davom etish</string>
    <string name="input_shop_url">Do\'koningiz prefiksini kiriting</string>
    <string name="test_base_url" translatable="false">https://smart-shop.my-project.site</string>
    <string name="no_internet">Internet yo\'q</string>
    <string name="no_internet_message">Internet bilan aloqa yo\'q. Aloqa bo\'lgan payti bu oyna avtomatik yopiladi.</string>
    <string name="exit">Ilovani yopish</string>
</resources>