<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/dialog_sale_min_width_mobile">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:padding="@dimen/padding_small"
        android:text="@string/return_order"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/item_text_size_standard_mobile"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_standard"
        android:gravity="center"
        android:text="@string/payment_cash"
        android:textColor="@color/black"
        android:textSize="@dimen/item_text_size_standard_mobile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_48"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:text="@string/payment_type"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_payment_type_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:text="@string/required_field"
        android:textColor="@color/error_color"
        android:textSize="@dimen/text_size_main"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/tv_payment_type"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name"
        tools:ignore="SpUsage" />

    <CheckBox
        android:id="@+id/chb_cash"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:foreground="?attr/selectableItemBackground"
        android:paddingVertical="@dimen/padding_standard_middle"
        android:text="@string/payment_cash"
        android:textAppearance="@style/TextAppearance.ElektroLife.TwentyTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_type" />

    <CheckBox
        android:id="@+id/chb_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:foreground="?attr/selectableItemBackground"
        android:paddingVertical="@dimen/padding_standard_middle"
        android:text="@string/payment_card"
        android:textAppearance="@style/TextAppearance.ElektroLife.TwentyTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_cash" />

    <CheckBox
        android:id="@+id/chb_debt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:foreground="?attr/selectableItemBackground"
        android:paddingVertical="@dimen/padding_standard_middle"
        android:text="@string/payment_debt"
        android:textAppearance="@style/TextAppearance.ElektroLife.TwentyTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_card" />

    <CheckBox
        android:id="@+id/chb_debt_paid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:foreground="?attr/selectableItemBackground"
        android:paddingVertical="@dimen/padding_standard_middle"
        android:text="@string/payment_debt_paid"
        android:textAppearance="@style/TextAppearance.ElektroLife.TwentyTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_debt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_standard"
        android:hint="@string/quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chb_debt_paid"
        app:suffixTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="@dimen/item_text_size_standard_mobile"
            tools:ignore="SpUsage" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginVertical="@dimen/margin_standard"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:paddingHorizontal="32dp"
        android:text="@string/add"
        android:textSize="@dimen/text_size_larger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_count"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:paddingHorizontal="32dp"
        android:text="@string/cancel_uzb"
        android:textSize="@dimen/text_size_larger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>